--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "cli-progress": "^2.1.1",
+    "colors": "^1.3.3",
     "puppeteer": "^1.18.1",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
-  }
+    "request-promise": "^4.2.4",
+    "requestretry": "^4.0.0",
+    "xmlbuilder": "^13.0.2"
+  },
+  "devDependencies": {}
 }
